--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <h4>What’s the working tree?</h4>
     <p>working tree is the folder where the repository is initialised, which inclused all the subdirectories and files.</p>
     <h4>What’s the staging area?</h4>
+    <p>bir Leyla maskaraligi yapmazsam olmaz :p</p>
     <p>The staging area is the area that holds all the files we’re ready to commit and push to the repository.</p>
     <h4>What’s the command to retrieve the latest version of your files from the remote server?</h4>
     <p>git pull origin main</p>
